plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}


sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "testnav-pdl-forvalter"
        property "sonar.projectName", "testnav-pdl-forvalter"
        property "sonar.organization", "navit"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

properties {
    compileJava.options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    mavenLocal()
}

java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config

    implementation 'no.nav.testnav.libs:database'
    implementation 'no.nav.testnav.libs:data-transfer-objects'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-security'

    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql'

    implementation 'ma.glasnost.orika:orika-core:1.5.4'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.1'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'no.nav.testnav.libs:testing'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}